--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ h1{
 .box{
   width: 350px;
   height: 550px;
-  border: solid;
+  border: solid white;
   border-radius: 20px;
   box-shadow: #a4a4a4 1px 2px;
   display: block;
